2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/sj-play.c: (cb_hop_track), (cb_change_button), (idle_state),
	(cb_state):
	  Let change state be executed in idle handler, to prevent theoretical
	  threading issues that make GStreamer feared and famous. Also add a
	  timeout handler before we reset the button label, so it does not
	  switch quickly between PAUSED and PLAYING on track-switch, but
	  stays in play-mode.

2005-07-27  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.schemas.in:
	Fix grammatical mistake.

2005-07-25  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.90.

2005-07-25  Ross Burton  <ross@burtonini.com>

	* .cvsignore:
	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* help/sound-juicer/*:
	* m4/.cvsignore
	Ported documentation to gnome-doc-utils.

	* omf.make:
	* xmldocs.make:
	Removed.

2005-07-24  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix typo.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* data/sj-record.png:
	New icon (Luca Cavalli)

2005-07-14  Abduxukur Abdurixit <abdurixit@gmail.com>

	* configure.in: Added "ug" to ALL_LINGUAS.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.11.4.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Check for gnomevfssink, not filesink.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Thanks to Thomas Vander Stichele for telling me how to make the
	buffers larger, and to check the link() call result.

2005-07-14  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Use threads, speeding up ripping.

2005-07-14 Madhan Raj M  <madhanrm@cvs.gnome.org>

	* src/sj-main.c:
	* src/sj-extracting.c:
	* src/sj-play.h:
	* src/sound-juicer.h:
	* data/sound-juicer.glade:
	Bring the progress bar to the main UI.

2005-07-13  Ross Burton  <ross@burtonini.com>

	* src/sound-juicer.h:
	* src/sj-main.c: