@@ -1,5 +1,11 @@
 2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* src/sj-play.c: (select_track), (cb_hop_track), (setup),
+	(on_play_activate):
+	  Respect checkboxes for playback, also (#309259).
+
+2005-07-27  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* src/sj-play.c: (cb_hop_track), (cb_change_button), (idle_state),
 	(cb_state):
 	  Let change state be executed in idle handler, to prevent theoretical
